fix: fixed All Products in the navigation on small screen and corrected footer font size

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
 
 /* Links */
 .products-link {
-  @apply inline-block px-4 py-2 text-white font-bold rounded bg-blue-700 transition-colors hover:bg-blue-800 sm:text-lg;
+  @apply inline-block py-2 text-white font-bold rounded bg-blue-700 transition-colors hover:bg-blue-800 sm:text-lg;
 }
 
 /* Star Products */
